--- a/decidim-debates/config/locales/en.yml
+++ b/decidim-debates/config/locales/en.yml
@@ -46,11 +46,15 @@ en:
             endorsements_enabled: Endorsements enabled
     debates:
       actions:
+        active: Active debates
+        archive: Archive
+        archived: Archived debates
         close: Close
         confirm_destroy: Are you sure?
         destroy: Delete
         edit: Edit
         new: New %{name}
+        unarchive: Unarchive
         title: Actions
       admin:
         debate_closes:
@@ -58,6 +62,9 @@ en:
             close: Close
             title: Close debate
         debates:
+          archive:
+            invalid: There was a problem archiving the debate.
+            success: Debate successfully archived.
           create:
             invalid: There was a problem creating the debate.
             success: Debate successfully created.
@@ -71,6 +78,9 @@ en:
           new:
             create: Create debate
             title: New debate
+          unarchive:
+            invalid: There was a problem unarchiving the debate.
+            success: Debate successfully unarchived.
           update:
             invalid: There was a problem updating this debate.
             success: Debate successfully updated.
