--- a/decidim-demographics/config/locales/en.yml
+++ b/decidim-demographics/config/locales/en.yml
@@ -1,5 +1,12 @@
 ---
 en:
+  activemodel:
+    attributes:
+      demographic:
+        age: How old are you?
+        attended_before: Have you attended a public event that was about the European Union before (either online or in person)?
+        education_age_stop: How old were you when you stopped full-time education?
+        living_condition: Would you say you live in a...?
   decidim:
     components:
       demographics:
@@ -13,6 +20,7 @@ en:
         demographics:
           form:
             age_help: Pleae select your age group
+            age_label: How old are you?
             age_prompt: Please select your age
             attended_before:
               affirmative: 'Yes'
