--- a/decidim-accountability/config/locales/en.yml
+++ b/decidim-accountability/config/locales/en.yml
@@ -43,7 +43,7 @@ en:
         title: Actions
       admin:
         exports:
-          accountability_comments: Comments
+          result_comments: Comments
           results: Results
         import_results:
           new:
