--- a/decidim-core/config/locales/en.yml
+++ b/decidim-core/config/locales/en.yml
@@ -669,7 +669,7 @@ en:
         file:
           explanation: 'Guidance for file:'
           message_1: Has to be a document.
-          message_2: For csv format, the separator between columns must be a comma (,)
+          message_2: For images, use preferrably landscape images, the service crops the image. For CSV files, the separator between columns must be a comma (",")
         image:
           explanation: 'Guidance for image:'
           message_1: Preferrably a landscape image that does not have any text.
