--- a/decidim-core/config/locales/en.yml
+++ b/decidim-core/config/locales/en.yml
@@ -668,7 +668,7 @@ en:
       file_help:
         file:
           explanation: 'Guidance for file:'
-          message_1: Has to be a document.
+          message_1: Has to be an image or a document.
           message_2: For images, use preferrably landscape images, the service crops the image. For CSV files, the separator between columns must be a comma (",")
         image:
           explanation: 'Guidance for image:'
