--- a/decidim-core/config/locales/en.yml
+++ b/decidim-core/config/locales/en.yml
@@ -371,6 +371,13 @@ en:
             dummy_step_translatable_text: Dummy Step Translatable Text
     contact: Contact
     content_blocks:
+      cta:
+        name: Image, text and Call To Action button
+      cta_settings_form:
+        background_image: Background image
+        button_text: Call To Action text
+        button_url: Call To Action URL
+        description: Description
       footer_sub_hero:
         name: Footer sub hero banner
       hero:
@@ -380,6 +387,11 @@ en:
         welcome_text: Welcome text
       highlighted_content_banner:
         name: Highlighted content banner
+      highlighted_elements_settings_form:
+        orders:
+          label: 'Sort elements by:'
+          random: Random
+          recent: Most recent
       how_to_participate:
         name: How to participate
       html:
