--- a/decidim-templates/config/locales/en.yml
+++ b/decidim-templates/config/locales/en.yml
@@ -50,6 +50,8 @@ en:
           index:
             confirm_delete: Are you sure you want to delete this template?
             title: Block User Messages
+          template_chooser:
+            select_template: Select a template answer
         questionnaire_templates:
           choose:
             create_from_template: Create from template
