--- a/decidim-admin/config/locales/en.yml
+++ b/decidim-admin/config/locales/en.yml
@@ -362,6 +362,12 @@ en:
         'true': 'Yes'
         user_name: User
       dashboard:
+        pending_moderations:
+          anouncement:
+            one: There are %{count} pending moderation
+            other: There are %{count} pending moderations
+          goto_moderation: Go to global moderations
+          title: Pending Moderations
         show:
           view_more_logs: View more logs
           welcome: Welcome to the Admin Panel.
