--- a/docs/modules/develop/pages/releases.adoc
+++ b/docs/modules/develop/pages/releases.adoc
@@ -20,28 +20,52 @@ Mark `develop` as the reference to the next release:
  .. Run `bin/rake bundle`, this will update all the `Gemfile.lock` files
  .. Run `bin/rake webpack`, this will update the JavaScript bundle.
 . Update `SECURITY.md` and change the supported version to the new version.
-. Update the `CHANGELOG.MD`.
+. Update the `CHANGELOG.md`.
 At the top you should have an `Unreleased` header with the `Added`, `Changed`, `Fixed` and `Removed` empty sections.
 After that, the header with the current version and link with the same beforementioned sections and a `Previous versions` header at the bottom that links to the previous minor release stable branch.
 
 [source,markdown]
 ----
+# Changelog
+
 ## [Unreleased](https://github.com/decidim/decidim/tree/HEAD)
 
-### 1. Upgrade notes
+### Added
+
+### Changed
+
+### Fixed
+
+### Removed
+
+...
+
+## Previous versions
+
+Please check [0.XX-stable](https://github.com/decidim/decidim/blob/release/0.XX-stable/CHANGELOG.md) for previous changes.
+----
+
+. Update the `RELEASE_NOTES.md`
+You can use the following template for the new `RELEASE_NOTES.md`:
+
+[source,markdown]
+----
+# Release Notes
+
+## 1. Upgrade notes
 
 As usual, we recommend that you have a full backup, of the database, application code and static files.
 
 To update, follow these steps:
 
-#### 1.1. Update your Gemfile
+### 1.1. Update your Gemfile
 
 ```ruby
 gem "decidim", github: "decidim/decidim"
 gem "decidim-dev", github: "decidim/decidim"
 ```
 
-#### 1.2. Run these commands
+### 1.2. Run these commands
 
 ```console
 bundle update decidim
@@ -49,24 +73,24 @@ bin/rails decidim:upgrade
 bin/rails db:migrate
 ```
 
-#### 1.3. Follow the steps and commands detailed in these notes
+### 1.3. Follow the steps and commands detailed in these notes
 
-### 2. General notes
+## 2. General notes
 
-### 3. One time actions
+## 3. One time actions
 
 These are one time actions that need to be done after the code is updated in the production database.
 
-#### 3.1. [[TITLE OF THE ACTION]]
+### 3.1. [[TITLE OF THE ACTION]]
 
 You can read more about this change on PR [\#XXXX](https://github.com/decidim/decidim/pull/XXXX).
 
-### 4. Scheduled tasks
+## 4. Scheduled tasks
 
 Implementers need to configure these changes it in your scheduler task system in the production server. We give the examples
  with `crontab`, although alternatively you could use `whenever` gem or the scheduled jobs of your hosting provider.
 
-#### 4.1. [[TITLE OF THE TASK]]
+### 4.1. [[TITLE OF THE TASK]]
 
 ```bash
 4 0 * * * cd /home/user/decidim_application && RAILS_ENV=production bundle exec rails decidim:TASK
@@ -74,9 +98,9 @@ Implementers need to configure these changes it in your scheduler task system in
 
 You can read more about this change on PR [\#XXXX](https://github.com/decidim/decidim/pull/XXXX).
 
-### 5. Changes in APIs
+## 5. Changes in APIs
 
-#### 5.1. [[TITLE OF THE CHANGE]]
+### 5.1. [[TITLE OF THE CHANGE]]
 
 In order to [[REASONING (e.g. improve the maintenance of the code base)]] we have changed...
 
@@ -93,22 +117,6 @@ You need to change it to:
 # Explain the usage of the API as it is in the new version
 result = 1 + 1 if after
 ```
-
-### Detailed changes
-
-#### Added
-
-#### Changed
-
-#### Fixed
-
-#### Removed
-
-...
-
-## Previous versions
-
-Please check [0.XX-stable](https://github.com/decidim/decidim/blob/release/0.XX-stable/CHANGELOG.md) for previous changes.
 ----
 
 . Push the changes `git add . && git commit -m "Bump develop to next release version" && git push origin develop`
@@ -212,18 +220,20 @@ Release Candidates will be tested in a production server (usually Metadecidim) d
 . Run `bin/rake update_versions`, this will update all references to the new version.
 . Run `bin/rake bundle`, this will update all the `Gemfile.lock` files
 . Run `bin/rake webpack`, this will update the JavaScript bundle.
-. Update `CHANGELOG.MD`.
+. Update the `CHANGELOG.md`.
 At the top you should have an `Unreleased` header with the `Added`, `Changed`, `Fixed` and `Removed` empty sections.
 After that, the header with the current version and link like `+## [0.20.0](https://github.com/decidim/decidim/tree/v0.20.0)+` and again the headers for the `Added`, `Changed`, `Fixed` and `Removed` sections.
 . Commit all the changes: `git add . && git commit -m "Bump to v0.XX.0 final version" && git push origin release/x.y-stable`.
 . Run `git pull && bin/rake release_all`, this will create all the tags, push the commits and tags and release the gems to RubyGems.
 . Once all the gems are published you should create a new release at this repository, just go to the https://github.com/decidim/decidim/releases[releases page] and create a new one.
+. Once you have create the release with the release notes, update the `RELEASE_NOTES.md` at `release/x.y-stable`.
+Clear out the old notes and replace them with the `RELEASE_NOTES.md` template shown shown above in this document.
 . Update Decidim's Docker repository as explained in the Docker images section below.
 . Update Crowdin synchronization configuration with Github:
  .. Add the new `release/x.y-stable` branch.
  .. Remove from Crowdin branches that are not officially supported anymore.
 That way they don't synchronize with Github.
-. Update the `CHANGELOG.MD` in `release/x.y-stable`.
+. Update the `CHANGELOG.md` at `release/x.y-stable`.
 At the top you should have an `Unreleased` header with the `Added`, `Changed`, `Fixed` and `Removed` empty sections.
 After that, the header with the current version.
 Add the `Unreleased` section or create the new current version section.
@@ -274,12 +284,14 @@ The process is very similar from releasing a new Decidim version:
 . Run `bin/rake update_versions`, this will update all references to the new version.
 . Run `bin/rake bundle`, this will update all the `Gemfile.lock` files
 . Run `bin/rake webpack`, this will update the JavaScript bundle.
-. Update `CHANGELOG.MD`.
+. Update the `CHANGELOG.md`.
 At the top you should have an `Unreleased` header with the `Added`, `Changed`, `Fixed` and `Removed` empty sections.
 After that, the header with the current version and link like `+## [0.20.0](https://github.com/decidim/decidim/tree/v0.20.0)+` and again the headers for the `Added`, `Changed`, `Fixed` and `Removed` sections.
 . Commit all the changes: `git add . && git commit -m "Prepare VERSION release"`
 . Run `bin/rake release_all`, this will create all the tags, push the commits and tags and release the gems to RubyGems.
 . Once all the gems are published you should create a new release at this repository, just go to the https://github.com/decidim/decidim/releases[releases page] and create a new one.
+. Once you have create the release with the release notes, update the `RELEASE_NOTES.md` at `release/x.y-stable`.
+Clear out the old notes and replace them with the `RELEASE_NOTES.md` template shown shown above in this document.
 . Update Decidim's Docker repository as explained in the Docker images section.
 
 == Docker images for each release
